<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:id="@+id/main_activity_view"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/type_activity_segment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_activity_segment"/>
    <TextView
        android:id="@+id/type_basal_metabolic_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_basal_metabolic_rate"/>
    <TextView
        android:id="@+id/type_calories_expended"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_calories_expended"/>
    <TextView
        android:id="@+id/type_cycling_pedaling_cadence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_cycling_pedaling_cadence"/>
    <TextView
        android:id="@+id/type_cycling_pedaling_cumulative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_cycling_pedaling_cumulative"/>
    <TextView
        android:id="@+id/type_heart_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_heart_points"/>
    <TextView
        android:id="@+id/type_move_minutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_move_minutes"/>
    <TextView
        android:id="@+id/type_step_count_cadence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_step_count_cadence"/>
    <TextView
        android:id="@+id/type_step_count_delta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_step_count_delta"/>
    <TextView
        android:id="@+id/type_body_fat_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_body_fat_percentage"/>
    <TextView
        android:id="@+id/type_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_weight"/>
    <TextView
        android:id="@+id/aggregate_calories_expended"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aggregate_calories_expended"/>
    <TextView
        android:id="@+id/type_distance_delta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_distance_delta"/>
    <TextView
        android:id="@+id/type_location_sample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_location_sample"/>
    <TextView
        android:id="@+id/type_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_speed"/>
    <TextView
        android:id="@+id/type_hydration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_hydration"/>
    <TextView
        android:id="@+id/type_sleep_segment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_sleep_segment"/>
    <TextView
        android:id="@+id/type_heart_rate_bpm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_heart_rate_bpm"/>

</LinearLayout>
